# the-os

./: .gitignore  Cargo.toml  Makefile  linker.ld  x86_64-unknown-none.json
user/: Cargo.toml  linker.ld
user/.cargo/: config.toml
user/bench/: Cargo.toml
user/bench/src/: main.rs
user/compat/libc/: Cargo.toml
user/compat/libc/include/: errno.h  inttypes.h  stdlib.h  string.h
user/compat/libc/src/: lib.rs
user/drivers/ata/: Cargo.toml
user/drivers/ata_pio_driver/: Cargo.toml
user/drivers/ata_pio_driver/src/: main.rs
user/drivers/graphics/intel/i915/: Cargo.toml  build.rs
user/drivers/graphics/intel/i915/csrc/: i915_pci_enum_stub.c  i915_shim_entry.c  printf_shim.c  test.c
user/drivers/graphics/intel/i915/include/: acpi.h  agp.h  bios.h  drm.h  efifb.h  intagp.h  pci.h  vga.h
user/drivers/graphics/intel/i915/include/machine/: bus.h  cpu.h  (+3 more)
user/drivers/graphics/intel/i915/src/: main.rs
user/drivers/kb_driver/: Cargo.toml
user/drivers/kb_driver/src/: main.rs
user/drivers/kbd/: Cargo.toml
user/drivers/kbd/src/: main.rs
user/drivers/pci/: Cargo.toml
user/drivers/pci/src/: main.rs
user/drivers/usb/: Cargo.toml
user/drivers/usb/src/: main.rs
user/examples/goodbye/: Cargo.toml
user/examples/goodbye/src/: main.rs
user/examples/hello/: Cargo.toml
user/examples/hello/src/: main.rs
user/examples/spina/: Cargo.toml
user/examples/spinb/: Cargo.toml
user/examples/spinb/src/: main.rs
user/goodbye/: Cargo.toml  goodbye.elf  linker.ld
user/goodbye/.cargo/: config.toml
user/goodbye/src/: main.rs
user/hello/: Cargo.toml  hello.elf  linker.ld
user/hello/.cargo/: config.toml
user/hello/src/: main.rs
user/init/src/: main.rs
user/kb_driver/: Cargo.toml
user/kb_driver/src/: main.rs
user/libsys/: Cargo.toml
user/libsys/src/: lib.rs
user/libvirtio/: Cargo.toml
user/services/echo/: Cargo.toml
user/services/echo/src/: main.rs
user/services/echo_local/: Cargo.toml
user/services/echo_local/src/: main.rs
user/services/fs/: Cargo.toml
user/services/fs/src/: fake_libc_thing.rs  main.rs
user/services/vfs/: Cargo.toml
user/services/vfs/src/: main.rs
user/shell/: Cargo.toml
user/shell/src/: main.rs
user/spina/: Cargo.toml
user/spina/src/: main.rs
user/spinb/: Cargo.toml
user/spinb/src/: main.rs
user/the-initializer/: Cargo.toml
user/the-initializer/src/: main.rs
(+78 files in other folders)
