# Userspace workspace. All the-os user programs live here as members and share
# one toolchain config (.cargo/config.toml) and one linker script (linker.ld).
# Layout by role: init/ (pid 1 trust root), services/ (vfs + fs backends),
# drivers/ (device drivers), examples/ (test/demo progs), libsys/ (shared lib).
# Add a new program: create the crate dir under the right role, add it to
# `members`, add one line to the Makefile's `user` target.
[workspace]
resolver = "2"
members = [
    "libsys",
    "init",
    "services/vfs",
    "drivers/kb_driver",
    "shell",
    "examples/hello",
    "examples/goodbye",
    "examples/spina",
    "examples/spinb",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
