# Userspace workspace. All the-os user programs live here as members and share
# one toolchain config (.cargo/config.toml) and one linker script (linker.ld).
# Layout by role: init/ (pid 1 trust root), services/ (vfs + fs backends),
# drivers/ (device drivers), libsys/ (shared lib).
# Add a new program: create the crate dir under the right role, add it to
# `members`, add one line to the Makefile's `user` target.
[workspace]
resolver = "2"
members = [
    "libsys",
    "compat/libc",
    "init",
    "services/vfs",
    "services/fs",
    "drivers/kbd",
    "drivers/ata",
    "drivers/pci",
    "drivers/usb",
    "drivers/graphics/intel/i915",
    "shell",
    "services/echo",
    "services/echo_local",
    "bench",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
